feat : 세부 사항 수정